--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscríbete y dale like</p>
                 <p>Hola Hola</p>
+                <p>Editado en el computador de Cristian</p>
             </div>
         </div>
     </body>
