cambios desde el fork

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
-                Hyperblog
+                <h1 class="red">Esta es la modificación del FORK</h1>
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
