agrego otro cambio a mi fork

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 <h1 class="red">Esta es la modificación del FORK</h1>
+                <h1 class="red">Esta es la segunda modificación del FORK</h1>
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
